Use toList instead of Collectors.asList